This pr includes rendering of all listings. Also added a function for all fetch functions

--- a/login/index.html
+++ b/login/index.html
@@ -16,7 +16,7 @@
     />
 
     <link rel="stylesheet" href="./styles/css/styles.css" />
-    <script type="module" src="../src/api/authService.mjs"></script>
+    <script type="module" src="../src/main.mjs"></script>
   </head>
   <body>
     <!-- Header -->
