This pr installed vite and provides functionality for creating a new auction

--- a/feed/index.html
+++ b/feed/index.html
@@ -18,8 +18,8 @@
     />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/styles/css/styles.css" />
-    <script type="module" src="../src/main.mjs"></script>
+    <link rel="stylesheet" href="../styles/css/styles.css" />
+    <script type="module" src="../src/pages/feed.mjs"></script>
   </head>
   <body>
     <!-- Header -->
@@ -40,7 +40,7 @@
           </div>
 
           <a
-            href="create-listing.html"
+            href="../create_listing/index.html"
             class="btn btn-primary btn-sm d-flex align-items-center gap-1"
           >
             <i class="bi bi-plus-lg"></i> Create Listing
