This pr provides pagination with next and previous button

--- a/feed/index.html
+++ b/feed/index.html
@@ -169,8 +169,11 @@
                 </div>
               </div>
             </a>
-
-            <!-- (Repeat cards as needed...) -->
+          </div>
+          <div class="pagination d-flex justify-content-between">
+            <button class="btn btn-primary" id="prevBtn">Previous</button>
+            <span id="pageIndicator"></span>
+            <button class="btn btn-primary" id="nextBtn">Next</button>
           </div>
         </div>
       </section>
