This pr includes the profile page, with rendering of profile spesific auctions

--- a/feed/index.html
+++ b/feed/index.html
@@ -63,7 +63,7 @@
                 <span>1000 Credits</span>
               </div>
 
-              <a href="profile.html" class="user-dropdown__item">
+              <a href="../profile/index.html" class="user-dropdown__item">
                 <i class="bi bi-person"></i> Profile
               </a>
 
