--- a/update_listing/index.html
+++ b/update_listing/index.html
@@ -14,7 +14,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
-    <script type="module" src="../src/pages/createListing.mjs"></script>
+    <script
+      type="module"
+      src="../src/components/updateListingForm.mjs"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/styles/css/styles.css" />
   </head>
@@ -86,9 +89,9 @@
             class="listing-detail__details"
             style="max-width: 800px; margin: 0 auto"
           >
-            <h1 class="mb-4">Create New Listing</h1>
+            <h1 class="mb-4">Update Listing</h1>
 
-            <form id="createListingForm">
+            <form id="updateListingForm">
               <div class="form-group">
                 <label for="title" class="form-label">Title *</label>
                 <input
@@ -121,6 +124,7 @@
                   <div class="input-group mb-2">
                     <input
                       type="url"
+                      id="imageUrl"
                       name="imageUrl"
                       class="form-control media-input"
                       placeholder="https://example.com/image.jpg"
@@ -135,6 +139,7 @@
                       <input
                         type="text"
                         name="imageAlt"
+                        id="imageAlt"
                         class="form-control media-input"
                         placeholder="Image description"
                         required
