--- a/feed/index.html
+++ b/feed/index.html
@@ -17,6 +17,7 @@
 
     <link rel="stylesheet" href="../styles/css/styles.css" />
     <script type="module" src="../src/pages/feed.mjs"></script>
+    <script type="module" src="../src/components/header.mjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
@@ -78,9 +79,7 @@
       </div>
     </header>
 
-    <!-- Main Content -->
     <main>
-      <!-- Hero Section -->
       <section class="hero py-5 text-center">
         <div class="container">
           <h1 class="hero__title">Welcome to Auction House</h1>
