--- a/single_page/index.html
+++ b/single_page/index.html
@@ -17,6 +17,7 @@
 
     <link rel="stylesheet" href="/styles/main.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="../src/pages/single_page.mjs"></script>
   </head>
   <body>
     <header class="app-header">
@@ -75,7 +76,7 @@
       </div>
     </header>
 
-    <main class="py-4">
+    <main class="py-4" id="singlePageContainer">
       <div class="container">
         <a href="index.html" class="btn btn-outline-secondary btn-sm mb-3">
           <i class="bi bi-arrow-left"></i>
