--- a/feed/index.html
+++ b/feed/index.html
@@ -20,7 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <header class="app-header">
+    <header class="app-header" id="header">
       <div class="container d-flex justify-content-between align-items-center">
         <a
           href="index.html"
