--- a/profile/index.html
+++ b/profile/index.html
@@ -20,7 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <header class="app-header">
+    <header class="app-header" id="header">
       <div class="container">
         <a href="../feed/index.html" class="app-header__brand">
           <div class="app-header__logo">AH</div>
