--- a/single_page/index.html
+++ b/single_page/index.html
@@ -15,12 +15,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
 
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="../styles/css/styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="../src/pages/single_page.mjs"></script>
   </head>
   <body>
-    <header class="app-header">
+    <header class="app-header" id="header">
       <div
         class="container d-flex justify-content-between align-items-center py-3"
       >
