This pr provides the functionality of searching for posts

--- a/feed/index.html
+++ b/feed/index.html
@@ -93,6 +93,7 @@
                 type="text"
                 class="form-control ms-2"
                 placeholder="Search listings..."
+                id="searchForPosts"
               />
             </div>
           </div>
