This pr provides the functionality of sorting posts

--- a/feed/index.html
+++ b/feed/index.html
@@ -110,7 +110,7 @@
               <p class="text-muted">6 listings available</p>
             </div>
 
-            <select class="form-select w-auto">
+            <select class="form-select w-auto" id="sortPostsEl">
               <option value="newest">Newest First</option>
               <option value="ending-soon">Ending Soon</option>
               <option value="most-bids">Most Bids</option>
