This pr provides the functionality of sorting posts

--- a/feed/index.html
+++ b/feed/index.html
@@ -112,7 +112,9 @@
 
             <select class="form-select w-auto" id="sortPostsEl">
               <option value="newest">Newest First</option>
+              <option value="oldest">Oldest First</option>
               <option value="ending-soon">Ending Soon</option>
+              <option value="ending-last">Ending last</option>
               <option value="most-bids">Most Bids</option>
             </select>
           </div>
