--- a/feed/index.html
+++ b/feed/index.html
@@ -16,7 +16,7 @@
     />
 
     <link rel="stylesheet" href="../styles/css/styles.css" />
-    <script type="module" src="../src/pages/feed.mjs"></script>
+    <script type="module" src="../src/pages/feed-page.mjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
