--- a/single_page/index.html
+++ b/single_page/index.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="../styles/css/styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="../src/pages/single_page.mjs"></script>
+    <script type="module" src="../src/pages/single-page.mjs"></script>
   </head>
   <body>
     <header class="app-header" id="header">
