--- a/profile/index.html
+++ b/profile/index.html
@@ -20,84 +20,58 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <header class="app-header" id="header">
-      <div class="container">
-        <a href="../feed/index.html" class="app-header__brand">
-          <div class="app-header__logo">AH</div>
-          <span>Auction House</span>
-        </a>
-
-        <nav class="app-header__nav">
-          <div class="app-header__credits">
-            <i class="bi bi-coin"></i>
-            <span>1000 Credits</span>
-          </div>
-
-          <a href="../create_listing/index.html" class="btn btn-primary btn-sm">
-            <i class="bi bi-plus-lg"></i>
-            Create Listing
-          </a>
-
-          <div class="user-dropdown">
-            <button class="app-header__user" id="userMenuButton">
-              <img
-                src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=400&h=400&fit=crop"
-                alt="John Doe"
-                class="app-header__avatar"
-                id="avatarImage"
-              />
-              <span class="app-header__username">John Doe</span>
-              <i class="bi bi-chevron-down"></i>
-            </button>
-
-            <div class="user-dropdown__menu" id="userMenu">
-              <div class="user-dropdown__credits-mobile">
-                <i class="bi bi-coin"></i>
-                <span>1000 Credits</span>
-              </div>
-              <a href="profile.html" class="user-dropdown__item">
-                <i class="bi bi-person"></i>
-                Profile
-              </a>
-              <div class="user-dropdown__divider"></div>
-              <a
-                href="login.html"
-                class="user-dropdown__item user-dropdown__item--danger"
-              >
-                <i class="bi bi-box-arrow-right"></i>
-                Logout
-              </a>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </header>
+    <header class="app-header" id="header"></header>
 
     <main>
       <div class="profile-page">
         <div class="profile-page__banner">
-          <img
-            src="https://images.unsplash.com/photo-1557683316-973673baf926?w=1200&h=300&fit=crop"
-            alt="Profile banner"
+          <div
             id="profileBanner"
-          />
+            class="bg-light"
+            style="
+              height: 300px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+            "
+          >
+            <div class="spinner-border text-primary" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+          </div>
         </div>
 
         <div class="container">
           <div class="profile-page__header">
             <div class="profile-page__top">
-              <img
-                src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=400&h=400&fit=crop"
-                alt="John Doe"
-                class="profile-page__avatar"
+              <div
+                class="profile-page__avatar bg-light rounded-circle"
                 id="avatarImage2"
-              />
+                style="
+                  width: 120px;
+                  height: 120px;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                "
+              >
+                <div
+                  class="spinner-border spinner-border-sm text-secondary"
+                  role="status"
+                >
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </div>
 
               <div class="profile-page__info">
-                <h1 id="profileUsername">John Doe</h1>
-                <p class="email" id="profileEmail">john.doe@stud.noroff.no</p>
+                <h1 id="profileUsername">
+                  <span class="placeholder col-6 bg-secondary"></span>
+                </h1>
+                <p class="email" id="profileEmail">
+                  <span class="placeholder col-8 bg-secondary"></span>
+                </p>
                 <p class="bio" id="profileBio">
-                  Passionate collector and auction enthusiast
+                  <span class="placeholder col-10 bg-secondary"></span>
                 </p>
               </div>
 
@@ -105,7 +79,9 @@
                 <div class="profile-page__credits">
                   <div class="value">
                     <i class="bi bi-coin"></i>
-                    <span id="creditsEl">1000</span>
+                    <span id="creditsEl">
+                      <span class="placeholder col-3 bg-secondary"></span>
+                    </span>
                   </div>
                   <div class="label">Available Credits</div>
                 </div>
@@ -199,27 +175,23 @@ Passionate collector and auction enthusiast</textarea
                   data-tab="my-listings"
                   id="myListingsCount"
                 >
-                  My Listings (2)
+                  My Listings
                 </button>
               </li>
               <li class="nav-item">
                 <button class="nav-link" data-tab="my-bids" id="myBidsCount">
-                  My Bids (0)
+                  My Bids
                 </button>
               </li>
             </ul>
 
             <div class="tab-content">
               <div class="tab-pane active" id="my-listings">
-                <div class="profile-page__grid" id="myListings">
-                  <!-- Listings will be loaded from API -->
-                </div>
+                <div class="profile-page__grid" id="myListings"></div>
               </div>
 
               <div class="tab-pane" id="my-bids">
-                <div class="profile-page__grid" id="myBids">
-                  <!-- Bids will be loaded from API -->
-                </div>
+                <div class="profile-page__grid" id="myBids"></div>
               </div>
             </div>
           </div>
