--- a/create_listing/index.html
+++ b/create_listing/index.html
@@ -14,62 +14,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
-    <script type="module" src="../src/pages/create-listing-page.mjs"></script>
+    <script type="module" src="../src/pages/create-listing.mjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/styles/css/styles.css" />
   </head>
   <body>
-    <header class="app-header">
-      <div class="container">
-        <a href="../feed/index.html" class="app-header__brand">
-          <div class="app-header__logo">AH</div>
-          <span>Auction House</span>
-        </a>
-
-        <nav class="app-header__nav">
-          <div class="app-header__credits">
-            <i class="bi bi-coin"></i>
-            <span>1000 Credits</span>
-          </div>
-
-          <a href="create-listing.html" class="btn btn-primary btn-sm">
-            <i class="bi bi-plus-lg"></i>
-            Create Listing
-          </a>
-
-          <div class="user-dropdown">
-            <button class="app-header__user" id="userMenuButton">
-              <img
-                src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=400&h=400&fit=crop"
-                alt="John Doe"
-                class="app-header__avatar"
-              />
-              <span class="app-header__username">John Doe</span>
-              <i class="bi bi-chevron-down"></i>
-            </button>
-
-            <div class="user-dropdown__menu" id="userMenu">
-              <div class="user-dropdown__credits-mobile">
-                <i class="bi bi-coin"></i>
-                <span>1000 Credits</span>
-              </div>
-              <a href="profile.html" class="user-dropdown__item">
-                <i class="bi bi-person"></i>
-                Profile
-              </a>
-              <div class="user-dropdown__divider"></div>
-              <a
-                href="login.html"
-                class="user-dropdown__item user-dropdown__item--danger"
-              >
-                <i class="bi bi-box-arrow-right"></i>
-                Logout
-              </a>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </header>
+    <header class="app-header" id="header"></header>
 
     <main>
       <div class="listing-detail">
@@ -122,11 +72,21 @@
                     <input
                       type="url"
                       name="imageUrl"
+                      id="imageUrl"
                       class="form-control media-input"
                       placeholder="https://example.com/image.jpg"
                       required
                     />
                   </div>
+                </div>
+                <div class="mt-3">
+                  <img
+                    id="imageURLPreview"
+                    src=""
+                    alt="Image preview"
+                    class="img-thumbnail"
+                    style="max-width: 300px; max-height: 300px; display: none"
+                  />
                 </div>
                 <div class="form-group">
                   <label class="form-label">Image ALT *</label>
