--- a/update_listing/index.html
+++ b/update_listing/index.html
@@ -22,56 +22,8 @@
     <link rel="stylesheet" href="/styles/css/styles.css" />
   </head>
   <body>
-    <header class="app-header">
-      <div class="container">
-        <a href="../feed/index.html" class="app-header__brand">
-          <div class="app-header__logo">AH</div>
-          <span>Auction House</span>
-        </a>
-
-        <nav class="app-header__nav">
-          <div class="app-header__credits">
-            <i class="bi bi-coin"></i>
-            <span>1000 Credits</span>
-          </div>
-
-          <a href="create-listing.html" class="btn btn-primary btn-sm">
-            <i class="bi bi-plus-lg"></i>
-            Create Listing
-          </a>
-
-          <div class="user-dropdown">
-            <button class="app-header__user" id="userMenuButton">
-              <img
-                src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=400&h=400&fit=crop"
-                alt="John Doe"
-                class="app-header__avatar"
-              />
-              <span class="app-header__username">John Doe</span>
-              <i class="bi bi-chevron-down"></i>
-            </button>
-
-            <div class="user-dropdown__menu" id="userMenu">
-              <div class="user-dropdown__credits-mobile">
-                <i class="bi bi-coin"></i>
-                <span>1000 Credits</span>
-              </div>
-              <a href="profile.html" class="user-dropdown__item">
-                <i class="bi bi-person"></i>
-                Profile
-              </a>
-              <div class="user-dropdown__divider"></div>
-              <a
-                href="login.html"
-                class="user-dropdown__item user-dropdown__item--danger"
-              >
-                <i class="bi bi-box-arrow-right"></i>
-                Logout
-              </a>
-            </div>
-          </div>
-        </nav>
-      </div>
+    <header class="app-header" id="header">
+      <!-- Header will be loaded from API -->
     </header>
 
     <main>
@@ -131,6 +83,15 @@
                       required
                     />
                   </div>
+                </div>
+                <div class="mt-3">
+                  <img
+                    id="imageURLPreview"
+                    src=""
+                    alt="Image preview"
+                    class="img-thumbnail"
+                    style="max-width: 300px; max-height: 300px; display: none"
+                  />
                 </div>
                 <div class="form-group">
                   <label class="form-label">Image ALT *</label>
