--- a/update_listing/index.html
+++ b/update_listing/index.html
@@ -37,10 +37,7 @@
             Back to Profile
           </a>
 
-          <div
-            class="listing-detail__details"
-            style="max-width: 800px; margin: 0 auto"
-          >
+          <div class="listing-detail__details">
             <h1 class="mb-4">Update Listing</h1>
 
             <form id="updateListingForm">
@@ -90,7 +87,6 @@
                     src=""
                     alt="Image preview"
                     class="img-thumbnail"
-                    style="max-width: 300px; max-height: 300px; display: none"
                   />
                 </div>
                 <div class="form-group">
