--- a/create_listing/index.html
+++ b/create_listing/index.html
@@ -32,10 +32,7 @@
             Back to Profile
           </a>
 
-          <div
-            class="listing-detail__details"
-            style="max-width: 800px; margin: 0 auto"
-          >
+          <div class="listing-detail__details">
             <h1 class="mb-4">Create New Listing</h1>
 
             <form id="createListingForm">
@@ -85,7 +82,6 @@
                     src=""
                     alt="Image preview"
                     class="img-thumbnail"
-                    style="max-width: 300px; max-height: 300px; display: none"
                   />
                 </div>
                 <div class="form-group">
