--- a/feed/index.html
+++ b/feed/index.html
@@ -30,7 +30,7 @@
             Discover unique treasures and bid your way to victory.
           </p>
 
-          <div class="hero__search mt-4 mx-auto" style="max-width: 500px">
+          <div class="hero__search mt-4 mx-auto">
             <div class="search-bar d-flex align-items-center">
               <i class="bi bi-search search-bar__icon"></i>
               <input
