This pr allows users to upload multiple images and a image carousel on single page view.
In addition, the existing CSS has been reorganized and migrated into a structured SCSS setup.

--- a/single_page/index.html
+++ b/single_page/index.html
@@ -20,7 +20,7 @@
     <script type="module" src="../src/pages/single-page.mjs"></script>
   </head>
   <body>
-    <header class="app-header" id="header"></header>
+    <header class="main-header" id="header"></header>
 
     <main class="py-4" id="singlePageContainer"></main>
   </body>
