--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     />
 
     <link rel="stylesheet" href="./styles/css/styles.css" />
-    <script type="module" src="../src/main.mjs"></script>
+    <script type="module" src="./src/main.mjs"></script>
   </head>
   <body>
-    <header class="app-header">
+    <header class="main-header">
       <div class="container">
-        <a href="index.html" class="app-header brand">
-          <div class="app-header__logo">AH</div>
+        <a href="index.html" class="main-header brand">
+          <div class="main-header__logo">AH</div>
           <span>Auction House</span>
         </a>
 
-        <nav class="app-header nav">
+        <nav class="main-header nav">
           <a href="login.html" class="btn btn-ghost btn-sm">Login</a>
           <a href="register.html" class="btn btn-primary btn-sm">Register</a>
         </nav>
@@ -82,13 +82,6 @@
                 <a href="register.html">Register here</a>
               </p>
             </div>
-          </div>
-
-          <div class="auth-page__demo">
-            <p>
-              <strong>Demo:</strong> Use any @stud.noroff.no email to login or
-              register
-            </p>
           </div>
         </div>
       </div>
