--- a/login/index.html
+++ b/login/index.html
@@ -20,14 +20,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <header class="app-header">
+    <header class="main-header">
       <div class="container">
-        <a href="index.html" class="app-header brand">
-          <div class="app-header__logo">AH</div>
+        <a href="index.html" class="main-header brand">
+          <div class="main-header__logo">AH</div>
           <span>Auction House</span>
         </a>
 
-        <nav class="app-header nav">
+        <nav class="main-header nav">
           <a href="login.html" class="btn btn-ghost btn-sm">Login</a>
           <a href="register.html" class="btn btn-primary btn-sm">Register</a>
         </nav>
@@ -83,13 +83,6 @@
                 <a href="register.html">Register here</a>
               </p>
             </div>
-          </div>
-
-          <div class="auth-page__demo">
-            <p>
-              <strong>Demo:</strong> Use any @stud.noroff.no email to login or
-              register
-            </p>
           </div>
         </div>
       </div>
