--- a/profile/index.html
+++ b/profile/index.html
@@ -20,7 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <header class="app-header" id="header"></header>
+    <header class="main-header" id="header"></header>
 
     <main>
       <div class="profile-page">
