--- a/update_listing/index.html
+++ b/update_listing/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="/styles/css/styles.css" />
   </head>
   <body>
-    <header class="app-header" id="header">
+    <header class="main-header" id="header">
       <!-- Header will be loaded from API -->
     </header>
 
