--- a/update_listing/index.html
+++ b/update_listing/index.html
@@ -37,7 +37,7 @@
             Back to Profile
           </a>
 
-          <div class="listing-detail__details">
+          <div class="listing-detail__details listing-detail__details--form">
             <h1 class="mb-4">Update Listing</h1>
 
             <form id="updateListingForm">
@@ -86,7 +86,7 @@
                     id="imageURLPreview"
                     src=""
                     alt="Image preview"
-                    class="img-thumbnail"
+                    class="img-thumbnail media-preview media-preview--large"
                   />
                 </div>
                 <div class="form-group">
