--- a/profile/index.html
+++ b/profile/index.html
@@ -25,7 +25,7 @@
     <main>
       <div class="profile-page">
         <div class="profile-page__banner">
-          <div id="profileBanner" class="bg-light">
+          <div id="profileBanner" class="bg-light profile-page__banner-loading">
             <div class="spinner-border text-primary" role="status">
               <span class="visually-hidden">Loading...</span>
             </div>
@@ -36,7 +36,7 @@
           <div class="profile-page__header">
             <div class="profile-page__top">
               <div
-                class="profile-page__avatar bg-light rounded-circle"
+                class="profile-page__avatar bg-light rounded-circle profile-page__avatar-container"
                 id="avatarImage2"
               >
                 <div
@@ -78,9 +78,8 @@
             </div>
 
             <div
-              class="profile-page__edit-form"
+              class="profile-page__edit-form profile-page__edit-form--hidden"
               id="editForm"
-              style="display: none"
             >
               <form id="profileForm">
                 <div class="form-row">
