--- a/create_listing/index.html
+++ b/create_listing/index.html
@@ -16,7 +16,7 @@
     />
     <script type="module" src="../src/pages/create-listing.mjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/styles/css/styles.css" />
+    <link rel="stylesheet" href="../styles/css/styles.css" />
   </head>
   <body>
     <header class="main-header" id="header"></header>
@@ -25,7 +25,7 @@
       <div class="listing-detail">
         <div class="container">
           <a
-            href="profile.html"
+            href="../profile/index.html"
             class="btn btn-ghost btn-sm listing-detail__back"
           >
             <i class="bi bi-arrow-left"></i>
@@ -150,7 +150,7 @@
                 <button class="btn btn-primary" type="submit">
                   Create listing
                 </button>
-                <a href="profile.html" class="btn btn-ghost">Cancel</a>
+                <a href="../profile/index.html" class="btn btn-ghost">Cancel</a>
               </div>
             </form>
           </div>
