--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         </a>
 
         <nav class="main-header nav">
-          <a href="login.html" class="btn btn-ghost btn-sm">Login</a>
-          <a href="register.html" class="btn btn-primary btn-sm">Register</a>
+          <a href="./login/index.html" class="btn btn-ghost btn-sm">Login</a>
+          <a href="./register/index.html" class="btn btn-primary btn-sm"
+            >Register</a
+          >
         </nav>
       </div>
     </header>
