--- a/login/index.html
+++ b/login/index.html
@@ -15,7 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
 
-    <link rel="stylesheet" href="./styles/css/styles.css" />
+    <link rel="stylesheet" href="../styles/css/styles.css" />
     <script type="module" src="../src/main.mjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
