--- a/register/index.html
+++ b/register/index.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <script type="module" src="../src/main.mjs"></script>
-    <link rel="stylesheet" href="./styles/css/styles.css" />
+    <link rel="stylesheet" href="../styles/css/styles.css" />
   </head>
   <body>
     <main>
@@ -111,7 +111,7 @@
             <div class="auth-page footer">
               <p>
                 Already have an account?
-                <a href="login.html">Login here</a>
+                <a href="../login/index.html">Login here</a>
               </p>
             </div>
           </div>
