--- a/login/index.html
+++ b/login/index.html
@@ -14,10 +14,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="../styles/css/styles.css" />
     <script type="module" src="../src/main.mjs"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <header class="main-header">
@@ -28,8 +28,10 @@
         </a>
 
         <nav class="main-header nav">
-          <a href="login.html" class="btn btn-ghost btn-sm">Login</a>
-          <a href="register.html" class="btn btn-primary btn-sm">Register</a>
+          <a href="./login/index.html" class="btn btn-ghost btn-sm">Login</a>
+          <a href="./register/index.html" class="btn btn-primary btn-sm"
+            >Register</a
+          >
         </nav>
       </div>
     </header>
