--- a/index.html
+++ b/index.html
@@ -14,13 +14,27 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="./styles/css/styles.css" />
-    <!-- <script type="module" src="./src/main.mjs"></script> -->
-    <script type="module" src="./src/pages/login-page.mjs"></script>
+    <link rel="stylesheet" href="../styles/css/styles.css" />
+    <script type="module" src="../src/main.mjs"></script>
   </head>
   <body>
-    <header class="main-header" id="header"></header>
+    <header class="main-header">
+      <div class="container">
+        <a href="index.html" class="main-header brand">
+          <div class="main-header__logo">AH</div>
+          <span>Auction House</span>
+        </a>
+
+        <nav class="main-header nav">
+          <a href="./login/index.html" class="btn btn-ghost btn-sm">Login</a>
+          <a href="./register/index.html" class="btn btn-primary btn-sm"
+            >Register</a
+          >
+        </nav>
+      </div>
+    </header>
 
     <main>
       <div class="auth-page">
@@ -75,7 +89,5 @@
         </div>
       </div>
     </main>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
