--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="../styles/css/styles.css" />
-    <script type="module" src="../src/main.mjs"></script>
+    <script type="module" src="./src/main.mjs"></script>
   </head>
   <body>
     <header class="main-header">
