This pr adds input validation and minor fixes

--- a/create_listing/index.html
+++ b/create_listing/index.html
@@ -136,6 +136,7 @@
                 <label for="tags" class="form-label">Tags (optional)</label>
                 <input
                   type="text"
+                  name="tags"
                   class="form-control"
                   id="tags"
                   placeholder="vintage, camera, collectible (comma separated)"
