--- a/login/index.html
+++ b/login/index.html
@@ -20,21 +20,7 @@
     <script type="module" src="../src/main.mjs"></script>
   </head>
   <body>
-    <header class="main-header">
-      <div class="container">
-        <a href="index.html" class="main-header brand">
-          <div class="main-header__logo">AH</div>
-          <span>Auction House</span>
-        </a>
-
-        <nav class="main-header nav">
-          <a href="./login/index.html" class="btn btn-ghost btn-sm">Login</a>
-          <a href="./register/index.html" class="btn btn-primary btn-sm"
-            >Register</a
-          >
-        </nav>
-      </div>
-    </header>
+    <header class="main-header" id="header"></header>
 
     <main>
       <div class="auth-page">
@@ -82,7 +68,7 @@
             <div class="auth-page__footer">
               <p>
                 Don't have an account?
-                <a href="register.html">Register here</a>
+                <a href="../register/index.html">Register here</a>
               </p>
             </div>
           </div>
