--- a/update_listing/index.html
+++ b/update_listing/index.html
@@ -22,9 +22,7 @@
     <link rel="stylesheet" href="../styles/css/styles.css" />
   </head>
   <body>
-    <header class="main-header" id="header">
-      <!-- Header will be loaded from API -->
-    </header>
+    <header class="main-header" id="header"></header>
 
     <main>
       <div class="listing-detail">
@@ -132,6 +130,7 @@
                 <input
                   type="text"
                   class="form-control"
+                  name="tags"
                   id="tags"
                   placeholder="vintage, camera, collectible (comma separated)"
                 />
