--- a/index.html
+++ b/index.html
@@ -17,24 +17,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="../styles/css/styles.css" />
-    <script type="module" src="./src/main.mjs"></script>
+    <script type="module" src="./src/pages/login-page.mjs"></script>
   </head>
   <body>
-    <header class="main-header">
-      <div class="container">
-        <a href="index.html" class="main-header brand">
-          <div class="main-header__logo">AH</div>
-          <span>Auction House</span>
-        </a>
-
-        <nav class="main-header nav">
-          <a href="./login/index.html" class="btn btn-ghost btn-sm">Login</a>
-          <a href="./register/index.html" class="btn btn-primary btn-sm"
-            >Register</a
-          >
-        </nav>
-      </div>
-    </header>
+    <header class="main-header" id="header"></header>
 
     <main>
       <div class="auth-page">
