--- a/register/index.html
+++ b/register/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="../styles/css/styles.css" />
   </head>
   <body>
+    <header class="main-header" id="header"></header>
     <main>
       <div class="auth-page">
         <div class="auth-page container">
