--- a/register/index.html
+++ b/register/index.html
@@ -16,7 +16,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script type="module" src="../src/main.mjs"></script>
+    <script type="module" src="../src/pages/register-page.mjs"></script>
     <link rel="stylesheet" href="../styles/css/styles.css" />
   </head>
   <body>
@@ -29,7 +29,7 @@
             <p>Join the auction house community</p>
           </div>
 
-          <div class="auth-page__card">
+          <div class="auth-page card">
             <form class="auth-page form" id="registerUserForm">
               <div class="form-group">
                 <label for="name" class="form-label">Username</label>
