This pr include code comments and clean up SCSS

--- a/feed/index.html
+++ b/feed/index.html
@@ -32,7 +32,6 @@
           </p>
 
           <div class="hero__search">
-            <!-- Search Mode Toggle -->
             <div class="search-mode-toggle">
               <button
                 class="search-mode-toggle__btn active"
@@ -53,7 +52,7 @@
                 type="text"
                 class="form-control"
                 id="searchInput"
-                placeholder="Search listings by title, description, or tags..."
+                placeholder="Search listings by title or description..."
               />
             </div>
           </div>
