--- a/login/index.html
+++ b/login/index.html
@@ -39,7 +39,7 @@
                   name="email"
                   class="form-control"
                   id="loginEmail"
-                  placeholder="your.name@stud.noroff.no"
+                  placeholder="@stud.noroff.no"
                   value="john.doe@stud.noroff.no"
                   required
                 />
