--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 type="text"
                 class="form-control"
                 id="searchInput"
-                placeholder="Search listings by title, description, or tags..."
+                placeholder="Search listings by title or description..."
               />
             </div>
           </div>
