--- a/update_listing/index.html
+++ b/update_listing/index.html
@@ -70,38 +70,48 @@
               </div>
 
               <div class="form-group">
-                <label class="form-label">Image URLs *</label>
+                <label class="form-label">Images *</label>
                 <div id="mediaInputs">
-                  <div class="input-group mb-2">
-                    <input
-                      type="url"
-                      id="imageUrl"
-                      name="imageUrl"
-                      class="form-control media-input"
-                      placeholder="https://example.com/image.jpg"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="mt-3">
-                  <img
-                    id="imageURLPreview"
-                    src=""
-                    alt="Image preview"
-                    class="img-thumbnail media-preview media-preview--large"
-                  />
-                </div>
-                <div class="form-group">
-                  <label class="form-label">Image ALT *</label>
-                  <div id="mediaInputs">
-                    <div class="input-group mb-2">
-                      <input
-                        type="text"
-                        name="imageAlt"
-                        id="imageAlt"
-                        class="form-control media-input"
-                        placeholder="Image description"
-                        required
+                  <div class="media-group mb-3" data-media-index="0">
+                    <div class="d-flex gap-2 align-items-start mb-2">
+                      <div class="flex-grow-1">
+                        <label class="form-label form-label--small"
+                          >Image URL</label
+                        >
+                        <input
+                          type="url"
+                          name="imageUrl[]"
+                          class="form-control media-url-input"
+                          placeholder="https://example.com/image.jpg"
+                          required
+                        />
+                      </div>
+                      <div class="flex-grow-1">
+                        <label class="form-label form-label--small"
+                          >Image ALT Text</label
+                        >
+                        <input
+                          type="text"
+                          name="imageAlt[]"
+                          class="form-control media-alt-input"
+                          placeholder="Image description"
+                          required
+                        />
+                      </div>
+                      <div class="d-flex align-items-end">
+                        <button
+                          type="button"
+                          class="btn btn-outline-danger btn-sm remove-media-btn remove-media-btn--hidden"
+                        >
+                          <i class="bi bi-trash"></i>
+                        </button>
+                      </div>
+                    </div>
+                    <div class="media-preview-container">
+                      <img
+                        class="media-preview img-thumbnail"
+                        src=""
+                        alt="Image preview"
                       />
                     </div>
                   </div>
@@ -146,7 +156,7 @@
 
               <div class="d-flex gap-2">
                 <button class="btn btn-primary" type="submit">
-                  Create listing
+                  Update listing
                 </button>
                 <a href="../profile/index.html" class="btn btn-ghost">Cancel</a>
               </div>
