This pr adds banner input to register page.

--- a/login/index.html
+++ b/login/index.html
@@ -44,7 +44,7 @@
                   class="form-control"
                   id="loginEmail"
                   placeholder="@stud.noroff.no"
-                  value="john.doe@stud.noroff.no"
+                  value="@stud.noroff.no"
                   required
                 />
                 <small class="form-text"
