--- a/register/index.html
+++ b/register/index.html
@@ -108,6 +108,28 @@
                 />
               </div>
 
+              <div class="form-group">
+                <label for="bannerUrl" class="form-label">Banner url</label>
+                <input
+                  type="text"
+                  name="bannerUrl"
+                  class="form-control"
+                  id="RegisterBannerUrl"
+                  placeholder="Enter banner url"
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="bannerAlt" class="form-label">Banner alt</label>
+                <input
+                  type="text"
+                  name="bannerAlt"
+                  class="form-control"
+                  id="RegisterBannerAlt"
+                  placeholder="Enter banner alt text!"
+                />
+              </div>
+
               <button class="btn btn-primary btn-block" type="submit">
                 Create Account
               </button>
